Fix ugly blurry effect on hover

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,6 @@ body {
   background: var(--bg-primary);
 }
 ::-webkit-scrollbar-thumb {
-
   /* TODO: Select the color of the scrollbar */
 
   background: var(--bg-secondary);
@@ -268,6 +267,7 @@ header div::before {
   transition: 0.6s ease-in-out;
 }
 header div:hover {
+  backdrop-filter: none;
   box-shadow: none;
   transform: translate(-50%, -50%) scale(1.1);
 }
